2005-07-07  Wim Taymans  <wim@fluendo.com>

	* configure.ac:
	* ext/dv/Makefile.am:
	* ext/dv/gstdvdec.c: (gst_dvdec_class_init), (gst_dvdec_init),
	(gst_dvdec_get_src_query_types), (gst_dvdec_src_query),
	(gst_dvdec_handle_sink_event), (gst_dvdec_handle_src_event),
	(gst_dvdec_video_getcaps), (gst_dvdec_video_setcaps),
	(gst_dvdec_decode_audio), (gst_dvdec_decode_video),
	(gst_dvdec_decode_frame), (gst_dvdec_chain),
	(gst_dvdec_change_state), (gst_dvdec_set_property),
	(gst_dvdec_get_property), (plugin_init):
	* ext/dv/gstdvdec.h:
	* ext/esd/esdsink.c: (gst_esdsink_class_init):
	Ported DVdec to 0.9.
	Parent of esdsink is GstAudioSink.

2005-07-07  Wim Taymans  <wim@fluendo.com>

	* configure.ac:
	* ext/raw1394/Makefile.am:
	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_get_type),
	(gst_dv1394src_class_init), (gst_dv1394src_init),
	(gst_dv1394src_iso_receive), (gst_dv1394src_create),
	(gst_dv1394src_change_state), (gst_dv1394src_convert),
	(gst_dv1394src_get_query_types), (gst_dv1394src_query):
	* ext/raw1394/gstdv1394src.h:
	Ported the 1394 source to 0.9.

2005-07-07  Wim Taymans  <wim@fluendo.com>

	* ext/mad/gstid3tag.c: (gst_id3_tag_get_query_types):
	* ext/mad/gstmad.c: (gst_mad_get_query_types), (gst_mad_src_query):
	* gst/avi/gstavidemux.c: (gst_avi_demux_get_src_query_types):
	Remove deprecated/unsed code.

2005-07-06  Edward Hervey  <edward@fluendo.com>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_init): 
	GST_BASESRC --> GST_BASE_SRC

2005-07-05  Andy Wingo  <wingo@pobox.com>

	* gst/oneton: Removed (replaced by deinterleave).

	* gst/adder:
	* gst/audioconvert:
	* gst/audiorate:
	* gst/audioscale:
	* gst/ffmpegcolorspace:
	* gst/playback:
	* gst/sine:
	* gst/subparse:
	* gst/tags:
	* gst/tcp:
	* gst/videoscale:
	* gst/volume: Removed dirs that are now in gst-plugins-base.

2005-07-05  Edward Hervey  <edward@fluendo.com>

	* configure.ac: (GST_PLUGINS_ALL): 
	videofilter must be compiled first, since other plugins depend ont it.
